[package]
name = "xbee_zigbee"
categories = ["embedded", "hardware-support", "no-std"]
description = "API frame serialization for Xbee Zigbee UART"
keywords = ["arm", "cortex-m-rtfm", "stm32", "xbee", "zigbee"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Eugene Tolmachev <eugene.tolmachev@prolucid.ca>"]

[dependencies]
bitflags = "^1.0"
heapless = "^0.3.1"
embedded-hal = { version = "0.2.1", features = ["unproven"] }
nb = "0.1.1"

[dependencies.byteorder]
default-features = false
version = "1.2.3"

[dev-dependencies]
cortex-m = "0.4.3"
cortex-m-rt = { version = "0.3.12", features = ["abort-on-panic"] }
cortex-m-rtfm = "0.3.2"

[dev-dependencies.stm32f30x-hal]
git = "https://github.com/et1975/stm32f30x-hal"
branch = "v0.1.3"
features = ["rt"]

[profile.release]
lto = true

[profile.dev]
codegen-units = 1
